tests/reference/run-array_02_cc-634bad3.stderr
semantic error: Empty array constructor is not allowed
 --> tests/errors/array_02_cc.f90:4:12
  |
4 | print *, [[[], [[]]], [[]], []]
  |            ^^ 

semantic error: Empty array constructor is not allowed
 --> tests/errors/array_02_cc.f90:5:12
  |
5 | print *, [[[], [[]]], []]
  |            ^^ 
